src/components/Navbar/Navbar.sass
@import '../../_sass/_breakpoints.sass'
@import '../../_sass/_constants.sass'

.top-nav
  font-weight: normal
  -webkit-font-smoothing: antialiased
  width: 100%
  display: flex
  flex-wrap: wrap
  align-items: center
  justify-content: center
  position: fixed
  top: 0
  left: 0

.top-nav--open
  height: 100vh
  align-items: center
  justify-content: flex-start
  flex-direction: column
  background-color: #000
  transition: background-color .3s

.top-nav__on-top
  width: 100%
  display: flex
  flex-wrap: wrap
  align-items: center
  justify-content: space-between
  padding: 0 .75rem
  height: 4.236rem

.subline
  height: 1px
  width: 85%
  background-color: $light-grey

// HAMBURGER ___________________________________________________________________
.hamburger
  display: flex
  justify-content: flex-end
  width: 15%

// LIST ________________________________________________________________________
.nav__list
  display: flex
  flex-direction: column
  list-style: none
  padding: 0
  justify-content: space-around
  flex-grow: 2
  width: 100%
  margin-top: 0
  margin-bottom: 3.272rem
  text-align: left
  padding-left: 3.272rem

.top-nav__list
  display: none

// LINK ________________________________________________________________________
.top-nav__link
  text-transform: uppercase
  font-size: 1.618rem
  color: $dark-grey
  text-decoration: none
  display: block
  width: 100%

.top-nav__link:hover
  color: $primary
  transition: .5s

// LOGO ________________________________________________________________________
.logo
  width: 3.272rem

.logo-container
  display: flex
  align-items: center
  width: 75%

// DESKTOP _____________________________________________________________________
+for-desktop-up
  .top-nav
    height: 6.854rem
    width: 100%
    padding: 0 4.236rem

  .top-nav__on-top
    align-items: center
    flex-wrap: nowrap

  .subline
    height: 2px

  // LIST
  .top-nav__list
    display: flex
    flex-grow: 2
    flex-direction: row
    justify-content: space-between
    margin-bottom: 0

  // LOGO
  .logo
    width: 5.295rem

  .logo-container
    width: 25%

  // HAMBURGER
  .hamburger
    display: none

// DESKTOP BIG BREAKPOINT ______________________________________________________
+for-big-desktop-up
  .top-nav
    padding: 0 11.089rem

